--- a/meow-parent/pom.xml
+++ b/meow-parent/pom.xml
@@ -6,19 +6,30 @@
     <parent>
         <groupId>com.satori.meow</groupId>
         <artifactId>security</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>meow-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- pom version -->
+        <spring.boot.starter.version>3.2.0</spring.boot.starter.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>${spring.boot.starter.version}</version>
+                <type>pom</type>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
