--- a/meow-security/pom.xml
+++ b/meow-security/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.satori.meow</groupId>
         <artifactId>security</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>meow-security</artifactId>
@@ -17,4 +17,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.satori.meow</groupId>
+            <artifactId>meow-parent</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+    </dependencies>
 </project>
